# rnnoise

./: README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/rnnoise_example/: Bytes.java  MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
ios/: rnnoise.podspec
lib/: rnnoise.dart  rnnoise_bindings_generated.dart
macos/: rnnoise.podspec
macos/Classes/: rnnoise.c
src/: CMakeLists.txt  rnnoise.c  rnnoise.h
src/rnnoise/src/: common.h  dump_features.c  vec.h  vec_avx.h
